--- a/DataParser/DataParser.csproj
+++ b/DataParser/DataParser.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="GMap.NET.Windows" Version="2.0.1" />
     <PackageReference Include="GMap.NET.WinForms" Version="2.0.1" />
     <PackageReference Include="GMap.NET.WinPresentation" Version="2.0.1" />
+    <PackageReference Include="System.Device.Location.Portable" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
