Moved Map Login Into Separate Layer

--- a/LocationTracker.Client/LocationTracker.Client.csproj
+++ b/LocationTracker.Client/LocationTracker.Client.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataParser\DataParser.csproj" />
+    <ProjectReference Include="..\MapVisualizer\MapVisualizer.csproj" />
   </ItemGroup>
 
 </Project>
